Closed Bug 1883574 Opened 4 months ago Closed 4 months ago

error: undefined symbol: mozilla::GetGpuTimeSinceProcessStartInMs(unsigned long long*)

Categories

(Toolkit :: Performance Monitoring, defect)

Unspecified
iOS
defect

Tracking

()

RESOLVED FIXED
125 Branch
Tracking Status
firefox125 --- fixed

People

(Reporter: glandium, Assigned: glandium)

References

(Blocks 1 open bug)

Details

Attachments

(1 file)

 0:15.46 ld64.lld: error: undefined symbol: mozilla::GetGpuTimeSinceProcessStartInMs(unsigned long long*)
 0:15.47 >>> referenced by ../../components/glean/FOGIPC.o:(symbol mozilla::glean::RecordPowerMetrics()+0x60)
 0:15.47 ld64.lld: error: undefined symbol: mozilla::GetCpuTimeSinceProcessStartInMs(unsigned long long*)
 0:15.47 >>> referenced by ../../components/glean/FOGIPC.o:(symbol mozilla::glean::RecordPowerMetrics()+0x30)
 0:15.47 ld64.lld: error: undefined symbol: mozilla::GetProcInfoSync(nsTArray<mozilla::ProcInfoRequest>&&)
 0:15.47 >>> referenced by ../../components/processtools/ProcInfo_common.o:(symbol mozilla::detail::RunnableFunction<mozilla::GetProcInfo(nsTArray<mozilla::ProcInfoRequest>&&)::$_0>::Run()+0x30)

The implementation however currently doesn't return proper values for
CPU and GPU time.

Attachment #9389299 - Attachment description: Bug 1883574 - Build ProcInfo on iOS. → Bug 1883574 - Switch ProcInfo to use TASK_POWER_INFO instead of proc_pidinfo.
Pushed by mh@glandium.org:
https://hg.mozilla.org/integration/autoland/rev/253b63798541
Switch ProcInfo to use TASK_POWER_INFO instead of proc_pidinfo. r=florian
Status: NEW → RESOLVED
Closed: 4 months ago
Resolution: --- → FIXED
Target Milestone: --- → 125 Branch
Blocks: 1886607
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: