Bug 1883574 - Switch ProcInfo to use TASK_POWER_INFO instead of proc_pidinfo. r=florian

and build it on iOS.

Differential Revision: https://phabricator.services.mozilla.com/D203565