toolkit/components/processtools/ProcInfo.h
@@ -171,10 +171,10 @@ struct ProcInfoRequest {
   ProcInfoRequest(base::ProcessId aPid, ProcType aProcessType,
                   const nsACString& aOrigin, nsTArray<WindowInfo>&& aWindowInfo,
                   nsTArray<UtilityInfo>&& aUtilityInfo, uint32_t aChildId = 0
-#ifdef XP_MACOSX
+#ifdef XP_DARWIN
                   ,
                   mach_port_t aChildTask = 0
-#endif  // XP_MACOSX
+#endif  // XP_DARWIN
                   )
       : pid(aPid),
         processType(aProcessType),
@@ -182,10 +182,10 @@ struct ProcInfoRequest {
         windowInfo(std::move(aWindowInfo)),
         utilityInfo(std::move(aUtilityInfo)),
         childId(aChildId)
-#ifdef XP_MACOSX
+#ifdef XP_DARWIN
         ,
         childTask(aChildTask)
-#endif  // XP_MACOSX
+#endif  // XP_DARWIN
   {
   }
   const base::ProcessId pid;
@@ -195,9 +195,9 @@ struct ProcInfoRequest {
   const nsTArray<UtilityInfo> utilityInfo;
   // If the process is a child, its child id, otherwise `0`.
   const int32_t childId;
-#ifdef XP_MACOSX
+#ifdef XP_DARWIN
   const mach_port_t childTask;
-#endif  // XP_MACOSX
+#endif  // XP_DARWIN
 };
 
 /**
